<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Sign.SignInPage"
    tools:ignore="LabelFor">

    <ImageView
        android:id="@+id/SignIn_return"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/SignIn"
        android:src="@drawable/ic_before"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/SignIn_return"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/SignIn_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/SignIn"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="normal" />

<!--        <TextView-->
<!--            android:id="@+id/SignInTip_textview"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:layout_marginRight="20dp"-->
<!--            android:text="@string/SignInTip"-->
<!--            android:textColor="#101010" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="40dp"
            android:paddingRight="20dp"
            android:paddingBottom="40dp">


            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:autofillHints="@string/UsernameHint"
                android:clickable="false"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="2dp"
                android:ems="10"
                android:hint="@string/UsernameHint"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="40dp"
            android:paddingRight="20dp"
            android:paddingBottom="40dp">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:autofillHints="@string/PasswordHint"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="2dp"
                android:ems="10"
                android:hint="@string/PasswordHint"
                android:inputType="textPassword" />

        </LinearLayout>

        <ImageView
            android:id="@+id/rightarrow_Icon"
            android:layout_width="55dp"
            android:layout_height="48dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/RightArrowIcon"
            android:src="@drawable/ic_rightarrow" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>