<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Sign.SignInPage"
    tools:ignore="LabelFor">

    <ImageView
        android:id="@+id/SignUp_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/SignUp"
        android:src="@drawable/ic_before"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/SignUp_return"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/SignUp_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/SignUp"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="normal" />

        <!--        <TextView-->
        <!--            android:id="@+id/SignInTip_textview"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="20dp"-->
        <!--            android:layout_marginLeft="20dp"-->
        <!--            android:layout_marginEnd="20dp"-->
        <!--            android:layout_marginRight="20dp"-->
        <!--            android:text="@string/SignInTip"-->
        <!--            android:textColor="#101010" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">


            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:autofillHints="@string/RegistnameHint"
                android:clickable="false"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="2dp"
                android:ems="10"
                android:hint="@string/RegistnameHint"
                android:inputType="text"
                android:minHeight="48dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">


            <EditText
                android:id="@+id/editTextId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:autofillHints="@string/IdHint"
                android:clickable="false"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="2dp"
                android:ems="10"
                android:hint="@string/IdHint"
                android:inputType="text"
                android:minHeight="48dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">


            <EditText
                android:id="@+id/editTextNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:autofillHints="@string/NicknameHint"
                android:clickable="false"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="2dp"
                android:ems="10"
                android:hint="@string/NicknameHint"
                android:inputType="text"
                android:minHeight="48dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">


            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:autofillHints="@string/PasswordHint"
                android:drawableStart="@drawable/ic_password"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="2dp"
                android:ems="10"
                android:hint="@string/PasswordHint"
                android:inputType="textPassword"
                android:minHeight="48dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <EditText
                android:id="@+id/editTextVerifyPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:autofillHints="@string/VerificationPasswordHint"
                android:drawableStart="@drawable/ic_password"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="2dp"
                android:ems="10"
                android:hint="@string/VerificationPasswordHint"
                android:inputType="textPassword"
                android:minHeight="48dp" />

        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:orientation="vertical"-->
<!--            android:paddingLeft="20dp"-->
<!--            android:paddingTop="10dp"-->
<!--            android:paddingRight="20dp"-->
<!--            android:paddingBottom="20dp">-->


<!--            <Button-->
<!--                android:layout_width="wrap_content"-->
<!--                android:text="@string/verify_button"-->
<!--                android:layout_height="45dp"-->
<!--                android:layout_weight="2"-->
<!--                android:id="@+id/verify_button"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:textSize="17sp"-->
<!--                android:textColor="@color/black"-->
<!--                app:backgroundTint="@color/white"-->
<!--                app:strokeColor="#000000"-->
<!--                app:strokeWidth="1dp"-->
<!--                />-->

<!--        </LinearLayout>-->

        <ImageView
            android:id="@+id/rightarrow_Icon"
            android:layout_width="55dp"
            android:layout_height="48dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/RightArrowIcon"
            android:src="@drawable/ic_rightarrow" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>